# HaskellCakeStore

./: .gitignore  HaskellCakeStore.cabal  LICENSE  Main.hs  RunTests.hs  createDatabase.sh  initializeSandbox.sh  migrateDatabase.sh  runTests.sh  startWebApp.sh  upgradeDatabase.sh
Configuration/: Types.hs  Util.hs
Data/: Cakes.hs  DataHandler.hs  DataSetup.hs  Users.hs
Model/: Cake.hs
Ops/: AddUser.hs  DataSetup.hs  MigrateData.hs
Service/: Cakes.hs  ServiceHandler.hs  Users.hs
Tests/: DataTest.hs  ServiceTest.hs  WebTest.hs
Web/: HandlerMonad.hs  HaskellCakeStoreWeb.hs  WebHandler.hs  WebHelper.hs
Web/Handler/: CakesPage.hs  HomePage.hs
Web/View/: Cake.hs  HomePage.hs
databaseMigrations/migrations/: 0000000001_create_users_table.sql  0000000002_create_cakes_table.sql
databaseMigrations/migrationsInitialization/: 000000001_create_migrations_table.sql
sandbox/: Configuration.yaml
