name:    HaskellCakeStore
version: 0.0
synopsis : A haskell web app
build-type : Simple
cabal-version: >= 1.2


executable cakeStore
    main-is: Main.hs
    ghc-options: -Wall
    build-depends: base >= 4.3.0.0,
                   warp >= 1.3.0,
                   wai == 1.3.*,
                   blaze-builder == 0.3.1.0,
                   blaze-html == 0.5.0.0,
                   bytestring == 0.9.2.1,
                   http-types == 0.7.3.0.1,
                   conduit == 0.5.2.3,
                   resourcet == 0.3.3.1,
                   transformers == 0.2.2.0,
                   utf8-string == 0.3.7,
                   operational == 0.2.1.3,
                   stm == 2.2.0.1

executable databaseSetup
   main-is: Ops/DataSetup.hs
   build-depends: base >= 4.3.0.0,
                  HDBC == 2.3.1.1,
                  HDBC-sqlite3 == 2.3.3.0,
                  yaml == 0.8.1,
                  aeson == 0.6.0.2,
                  ghc-prim
executable addUser
    main-is: Ops/AddUser.hs

executable tests
   main-is: RunTests.hs
   build-depends: HUnit == 1.2.4.2

